# test-my-projct

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
tests/: test_main.py
